<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RootActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/english1_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/english1_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ImageView>

        <TextView
            android:id="@+id/english1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="110dp"
            android:text="@string/english_level_1_card_view"
            android:textColor="@color/coral"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/english2_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="185dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/english2_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/english2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="110dp"
            android:text="@string/english_level_2_card_view"
            android:textColor="#C30CE3"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/kotlin1_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/kotlin1_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/kotlin1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="185dp"
            android:text="@string/kotlin_level_1_card_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/kotlin2_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/kotlin2_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"></ImageView>

        <TextView
            android:id="@+id/kotlin2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="17dp"
            android:text="@string/kotlin_level_2_card_view"
            android:textColor="@color/black"
            android:textSize="33sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/java1_card_view"
        style="@style/card_view_style"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginTop="350dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/java1_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/java1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/java_level_1_card_view"
            android:textColor="@color/bronze"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/java2_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="230dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="455dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/java2_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ImageView>

        <TextView
            android:id="@+id/java2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/java_level_2_card_view"
            android:textColor="@color/bronze"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/name1_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="122dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/name1_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ImageView>

        <TextView
            android:id="@+id/name1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/name2_card_view"
        style="@style/card_view_style"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/name2_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/name2_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/container_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        app:layout_constraintTop_toTopOf="parent"></androidx.cardview.widget.CardView>

    <!--    <FrameLayout-->
    <!--        android:id="@+id/container_layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </FrameLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>